[package]
name = "pocket-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-utils = { version = "0.1.0", path = "../pocket-utils" }
hex = "0.4.3"
ed25519-dalek = "1.0.0"
rand_core = "0.5.0"
